test: add command parser tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,14 @@
 include(CTest)
 include(Catch)
 
-add_executable(taskmaster_tests "tests.cpp")
+add_executable(taskmaster_tests
+    sanity_test.cpp
+    command_parser_test.cpp
+)
 
 target_link_libraries(taskmaster_tests
     PRIVATE
+        TaskMaster::Core
         Catch2::Catch2WithMain
 )
 
